criando rota de ticket
